# zodiac

./: README.md  _init.sh  main.py  models.yml  om2.py  om_redis.py  ping_redis.py  redis_push.py  redis_test.py  requirements.txt  run.sh  run2.sh
.devcontainer/: docker-compose.yml
.devcontainer/etc/: redis.conf
addons/_root/: __conf__.yml
addons/stock_chart/: __conf__.yml
docs/: zodiac.drawio
libcore/base/: config_manager.py  controller_manager.py  env_manager.py  module_manager.py  om_model.py  redis_manager.py
libcore/om/: pydantic_generator.py
modules/_root/: __conf__.yml  conf.yml
modules/btc_chart/: __conf__.yml  conf.yml
modules/eth_chart/: __conf__.yml  conf.yml
modules/stock_chart/: conf.yml
modules/stock_chart/models/: stock_code.yml  stock_own.yml
tests/: test_yml_manager.py
zodiac/: __init__.py  conf.yml  config.yml  main.py  setup.cfg  setup.py
zodiac/libcore/: __init__.py
zodiac/libcore/base/: app_singleton.py  conf_manager.py  controller_manager.py  env_manager.py  module_manager.py  pydantic_generator.py  redis_manager.py  singleton_class.py  yml_manager.py
zodiac/libcore/om/: om_model.py
