[metadata]
name=sodius
download_url=https://github.com/algodash/sodius/tarball/master
description=Sodius ERP / Algo ERP / Sodium -> future: Algo 
long_description=file:README.md
long_description_content_type=text/markdown
author=minhng92
author_email=minhng92@gmail.com
maintainer=minhng92
maintainer_email=minhng92@gmail.com
url=https://github.com/algodash/sodius
license=MIT
license_files=LICENSE
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation

[options]
packages=
    sodius
python_requires=>=3.5, <4,
install_requires=
    redis==4.5.4
    redis-om==0.1.2
    pydantic==1.10.7
    omegaconf==2.3.0
    tornado==6.3
    # pytest==6.2.5
    # hypothesis==6.77.0

[options.entry_points]
console_scripts =
    zodiac = zodiac.main:main

[bdist_wheel]
universal=1
